add(): part1
